--- a/tasks/download-project.yml
+++ b/tasks/download-project.yml
@@ -1,7 +1,7 @@
 ---
 - name: Ensure bitbucket.org is a known host
   lineinfile:
-    dest: /home/user/.ssh/known_hosts
+    dest: "{{ ansible_env.HOME }}/.ssh/known_hosts"
     create: yes
     state: present
     line: "{{ lookup('pipe', 'ssh-keyscan -t rsa bitbucket.org') }}"
