--- a/tasks/ubuntu-setup-project.yml
+++ b/tasks/ubuntu-setup-project.yml
@@ -106,6 +106,8 @@
 
 - name: Copy nginx config file
   template:
-    src: "{{ work_domain }}.conf.j2"
+    src: "nginx.conf.j2"
     dest: "/etc/nginx/sites-enabled/{{ work_domain }}.conf"
   notify: Restart Nginx
+  become: true
+
