--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,7 +8,7 @@ galaxy_info:
 
   license: license (GPL-2.0-or-later, MIT, etc)
 
-  min_ansible_version: BSD
+  min_ansible_version: 2.9
 
   platforms:
     - name: Ubuntu
