Change min_ansible_version, work_dir, add socket condition

--- a/tasks/macosx-setup-project.yml
+++ b/tasks/macosx-setup-project.yml
@@ -2,14 +2,14 @@
 - name: Clone laravel project
   git:
     repo: "{{ project_git }}"
-    dest: /Users/{{ work_user }}/{{ work_dir }}/{{ work_domain }}
+    dest: "{{ work_dir }}"
     version: "{{ project_git_branch }}"
     force: true
 
 - name: Copy environment file
   copy:
-    src: /Users/{{ work_user }}/{{ work_dir }}/{{ work_domain }}/.env.example
-    dest: /Users/{{ work_user }}/{{ work_dir }}/{{ work_domain }}/.env
+    src: "{{ work_dir }}/.env.example"
+    dest: "{{ work_dir }}/.env"
     remote_src: true
 
 - name: Change environment file
@@ -18,17 +18,17 @@
     regexp: "{{ item.regexp }}"
     line: "{{ item.line }}"
   loop:
-    - {path: '/Users/{{ work_user }}/{{ work_dir }}/{{ work_domain }}/.env', regexp: '^APP_URL=', line: 'APP_URL=https://{{ work_domain }}'}
-    - {path: '/Users/{{ work_user }}/{{ work_dir }}/{{ work_domain }}/.env', regexp: '^DB_HOST=', line: 'DB_HOST={{ mysql_host }}'}
-    - {path: '/Users/{{ work_user }}/{{ work_dir }}/{{ work_domain }}/.env', regexp: '^DB_USERNAME=', line: 'DB_USERNAME={{ mysql_db_user }}'}
-    - {path: '/Users/{{ work_user }}/{{ work_dir }}/{{ work_domain }}/.env', regexp: '^DB_PASSWORD=', line: 'DB_PASSWORD={{ mysql_db_user_pass }}'}
-    - {path: '/Users/{{ work_user }}/{{ work_dir }}/{{ work_domain }}/.env', regexp: '^DB_DATABASE=', line: 'DB_DATABASE={{ mysql_database }}'}
-    - {path: '/Users/{{ work_user }}/{{ work_dir }}/{{ work_domain }}/.env', regexp: '^S3_KEY=', line: 'S3_KEY={{ s3_key }}'}
-    - {path: '/Users/{{ work_user }}/{{ work_dir }}/{{ work_domain }}/.env', regexp: '^S3_SECRET_KEY=', line: 'S3_SECRET_KEY={{ s3_secret }}'}
-    - {path: '/Users/{{ work_user }}/{{ work_dir }}/{{ work_domain }}/.env', regexp: '^S3_AWS_URL=', line: 'S3_AWS_URL={{ s3_host }}'}
-    - {path: '/Users/{{ work_user }}/{{ work_dir }}/{{ work_domain }}/.env', regexp: '^S3_BUCKET=', line: 'S3_BUCKET={{ s3_bucket }}'}
-    - {path: '/Users/{{ work_user }}/{{ work_dir }}/{{ work_domain }}/.env', regexp: '^S3_REGION=', line: 'S3_REGION={{ s3_region }}'}
-    - {path: '/Users/{{ work_user }}/{{ work_dir }}/{{ work_domain }}/.env', regexp: '^S3_USE_ENDPOINT=', line: 'S3_USE_ENDPOINT=true'}
+    - {path: '{{ work_dir }}/.env', regexp: '^APP_URL=', line: 'APP_URL=https://{{ work_domain }}'}
+    - {path: '{{ work_dir }}/.env', regexp: '^DB_HOST=', line: 'DB_HOST={{ mysql_host }}'}
+    - {path: '{{ work_dir }}/.env', regexp: '^DB_USERNAME=', line: 'DB_USERNAME={{ mysql_db_user }}'}
+    - {path: '{{ work_dir }}/.env', regexp: '^DB_PASSWORD=', line: 'DB_PASSWORD={{ mysql_db_user_pass }}'}
+    - {path: '{{ work_dir }}/.env', regexp: '^DB_DATABASE=', line: 'DB_DATABASE={{ mysql_database }}'}
+    - {path: '{{ work_dir }}/.env', regexp: '^S3_KEY=', line: 'S3_KEY={{ s3_key }}'}
+    - {path: '{{ work_dir }}/.env', regexp: '^S3_SECRET_KEY=', line: 'S3_SECRET_KEY={{ s3_secret }}'}
+    - {path: '{{ work_dir }}/.env', regexp: '^S3_AWS_URL=', line: 'S3_AWS_URL={{ s3_host }}'}
+    - {path: '{{ work_dir }}/.env', regexp: '^S3_BUCKET=', line: 'S3_BUCKET={{ s3_bucket }}'}
+    - {path: '{{ work_dir }}/.env', regexp: '^S3_REGION=', line: 'S3_REGION={{ s3_region }}'}
+    - {path: '{{ work_dir }}/.env', regexp: '^S3_USE_ENDPOINT=', line: 'S3_USE_ENDPOINT=true'}
 
 - name: Install PyMySQL
   pip:
@@ -57,19 +57,19 @@
 - name: Composer install
   composer:
     command: require
-    working_dir: "/Users/{{ work_user }}/{{ work_dir }}/{{ work_domain }}"
+    working_dir: "{{ work_dir }}"
 
 - name: Run npm install
   npm:
     ci: true
-    path: "/Users/{{ work_user }}/{{ work_dir }}/{{ work_domain }}"
+    path: "{{ work_dir }}"
   environment:
     PATH: "{{ lookup('env','PATH') }}"
   when: package_manager|string() == "npm"
 
 - name: Run yarn install
   yarn:
-    path: "/Users/{{ work_user }}/{{ work_dir }}/{{ work_domain }}"
+    path: "{{ work_dir }}"
   environment:
     PATH: "{{ lookup('env','PATH') }}"
   when: package_manager|string() == "yarn"
