--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,3 +3,6 @@
 
 - import_tasks: ubuntu-setup-project.yml
   when: ansible_distribution == 'Ubuntu'
+
+- import_tasks: macosx-setup-project.yml
+  when: ansible_distribution == "MacOSX"
