config: Add docker for role

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,3 +6,10 @@ socket: "false"
 horizon: "false"
 mailcatcher: "false"
 schedule: "false"
+docker: "false"
+docker_package: "docker-ce"
+docker_apt_gpg_key: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
+docker_apt_repository: "deb https://download.docker.com/linux/{{ ansible_distribution | lower }} {{ ansible_distribution_release }} stable"
+docker_compose_version: "1.25.4"
+docker_compose_url: https://github.com/docker/compose/releases/download/{{ docker_compose_version }}/docker-compose-Linux-x86_64
+docker_compose_path: "/usr/local/bin/docker-compose"
