--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -18,3 +18,8 @@
     name: supervisor
     state: restarted
 
+- name: Restart Docker
+  become: true
+  service:
+    name: docker
+    state: restarted
