--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,3 +1,4 @@
+---
 galaxy_info:
   role_name: laravel
   author: Igor Bronovskyi
@@ -6,7 +7,7 @@ galaxy_info:
 
   issue_tracker_url: https://github.com/tenantcloud/ansible-role-laravel/issues
 
-  license: license (GPL-2.0-or-later, MIT, etc)
+  license: BSD
 
   min_ansible_version: 2.9
 
