fix: Remove useless tasks from role

--- a/tasks/ubuntu-setup-project.yml
+++ b/tasks/ubuntu-setup-project.yml
@@ -119,21 +119,9 @@
   notify: Restart Nginx
   become: true
 
-- include: ubuntu-setup-supervisor.yml
-
-# - name: Add schedule cron job
-#   cron:
-#     cron_file: "/etc/crontab"
-#     name: "schedule cron job"
-#     user: "{{ ansible_user }}"
-#     job: "/usr/bin/php {{ work_dir }}/artisan schedule:run > {{ ansible_env.HOME }}/.log/scheduled-{{ work_domain }}.log 2>&1"
-#   become: true
-#   when: schedule == 'true'
-#   register: schedule_added
-
 - name: Create log directory
   file:
-    path: "{{ ansible_env.HOME }}/.log1"
+    path: "{{ ansible_env.HOME }}/.log"
     state: directory
     mode: "0755"
   when: schedule_added.changed
