--- a/tasks/macosx-setup-project.yml
+++ b/tasks/macosx-setup-project.yml
@@ -1,15 +1,18 @@
 ---
+- name: Set work_dir
+  set_fact: work_dir=$HOME/{{ work_dir }}/{{ work_domain }}
+
 - name: Clone laravel project
   git:
     repo: "{{ project_git }}"
-    dest: "$HOME/{{ work_dir }}"
+    dest: "{{ work_dir }}"
     version: "{{ project_git_branch }}"
     accept_hostkey: true
 
 - name: Copy environment file
   copy:
-    src: "$HOME/{{ work_dir }}/.env.example"
-    dest: "$HOME/{{ work_dir }}/.env"
+    src: "{{ work_dir }}/.env.example"
+    dest: "{{ work_dir }}/.env"
     remote_src: true
 
 - name: Change environment file
@@ -18,31 +21,23 @@
     regexp: "{{ item.regexp }}"
     line: "{{ item.line }}"
   loop:
-    - {path: '$HOME/{{ work_dir }}/.env', regexp: '^APP_ENV=', line: 'APP_ENV={{ app_env }}'}
-    - {path: '$HOME/{{ work_dir }}/.env', regexp: '^APP_URL=', line: 'APP_URL=https://{{ work_domain }}'}
-    - {path: '$HOME/{{ work_dir }}/.env', regexp: '^DB_HOST=', line: 'DB_HOST={{ mysql_host }}'}
-    - {path: '$HOME/{{ work_dir }}/.env', regexp: '^DB_USERNAME=', line: 'DB_USERNAME={{ mysql_db_user }}'}
-    - {path: '$HOME/{{ work_dir }}/.env', regexp: '^DB_PASSWORD=', line: 'DB_PASSWORD={{ mysql_db_user_pass }}'}
-    - {path: '$HOME/{{ work_dir }}/.env', regexp: '^DB_DATABASE=', line: 'DB_DATABASE={{ mysql_database }}'}
-    - {path: '$HOME/{{ work_dir }}/.env', regexp: '^S3_KEY=', line: 'S3_KEY={{ s3_key }}'}
-    - {path: '$HOME/{{ work_dir }}/.env', regexp: '^S3_SECRET_KEY=', line: 'S3_SECRET_KEY={{ s3_secret }}'}
-    - {path: '$HOME/{{ work_dir }}/.env', regexp: '^S3_AWS_URL=', line: 'S3_AWS_URL={{ s3_host }}'}
-    - {path: '$HOME/{{ work_dir }}/.env', regexp: '^S3_BUCKET=', line: 'S3_BUCKET={{ s3_bucket }}'}
-    - {path: '$HOME/{{ work_dir }}/.env', regexp: '^S3_REGION=', line: 'S3_REGION={{ s3_region }}'}
-    - {path: '$HOME/{{ work_dir }}/.env', regexp: '^S3_USE_ENDPOINT=', line: 'S3_USE_ENDPOINT=true'}
+    - {path: '{{ work_dir }}/.env', regexp: '^APP_ENV=', line: 'APP_ENV={{ app_env }}'}
+    - {path: '{{ work_dir }}/.env', regexp: '^APP_URL=', line: 'APP_URL=https://{{ work_domain }}'}
+    - {path: '{{ work_dir }}/.env', regexp: '^DB_HOST=', line: 'DB_HOST={{ mysql_host }}'}
+    - {path: '{{ work_dir }}/.env', regexp: '^DB_USERNAME=', line: 'DB_USERNAME={{ mysql_db_user }}'}
+    - {path: '{{ work_dir }}/.env', regexp: '^DB_PASSWORD=', line: 'DB_PASSWORD={{ mysql_db_user_pass }}'}
+    - {path: '{{ work_dir }}/.env', regexp: '^DB_DATABASE=', line: 'DB_DATABASE={{ mysql_database }}'}
+    - {path: '{{ work_dir }}/.env', regexp: '^S3_KEY=', line: 'S3_KEY={{ s3_key }}'}
+    - {path: '{{ work_dir }}/.env', regexp: '^S3_SECRET_KEY=', line: 'S3_SECRET_KEY={{ s3_secret }}'}
+    - {path: '{{ work_dir }}/.env', regexp: '^S3_AWS_URL=', line: 'S3_AWS_URL={{ s3_host }}'}
+    - {path: '{{ work_dir }}/.env', regexp: '^S3_BUCKET=', line: 'S3_BUCKET={{ s3_bucket }}'}
+    - {path: '{{ work_dir }}/.env', regexp: '^S3_REGION=', line: 'S3_REGION={{ s3_region }}'}
+    - {path: '{{ work_dir }}/.env', regexp: '^S3_USE_ENDPOINT=', line: 'S3_USE_ENDPOINT=true'}
 
 - name: Install PyMySQL
   pip:
     name: pymysql
     executable: /usr/local/bin/pip3
-
-- name: Install "pm2" package globally.
-  npm:
-    name: pm2
-    global: true
-  environment:
-    PATH: "{{ lookup('env','PATH') }}"
-  when: pm2
 
 - name: Create database
   mysql_db:
@@ -66,7 +61,7 @@
   template: src=vhost.conf.j2 dest=/usr/local/etc/nginx/servers/{{ work_domain }}.conf
 
 - name: Run deploy script
-  command: $HOME/{{ work_dir }}/sh/install.sh
+  command: "{{ work_dir }}/sh/install.sh"
   environment:
     PATH: "{{ lookup('env','PATH') }}"
   notify: Brew restart nginx
