--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,8 +1,13 @@
 ---
 # vars file for laravel
-node_apt_key: "https://keyserver.ubuntu.com/pks/\
-lookup?op=get&fingerprint=on&search=0x1655A0AB68576280"
-node_source_repo_1: "deb https://deb.nodesource.com/node_{{ nodejs_version }}
-{{ ansible_distribution_release }} main"
-node_source_repo_2: "deb-src https://deb.nodesource.com/\
-node_{{ nodejs_version }} {{ ansible_distribution_release }} main"
+
+ansible_python_interpreter: "/usr/bin/python3"
+docker_app_name: "laravel"
+
+# only for linux
+docker_mailhog_port: ""
+docker_minio_port: ""
+docker_mysql_port: ""
+docker_app_port: ""
+docker_supervisor_port: ""
+docker_supervisor_port_queue: ""
